--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col div1">
-          <img class="img1" src="https://images.pexels.com/photos/1520760/pexels-photo-1520760.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+          <img class="img1" src="" alt="">
           <h1 class="h11">Karmega kuzhali</h1>
         </div>
       </div>
