--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col div1">
-          <img class="img1" src="" alt="">
+          <img class="img1" src="https://gumlet.assettype.com/film-companion%2Fimport%2Fwp-content%2Fuploads%2F2020%2F07%2Fanna-ben-kumbalangi-Nights.jpg?auto=format%2Ccompress&fit=max&w=1200" alt="">
           <h1 class="h11">Karmega kuzhali</h1>
         </div>
       </div>
