--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
       <div class="fw-bold">Contact Details</div>
-      Phone No : 7335672436 || Email : angelaYu@gmail.com
+      Phone No : 7335672436 || Email : karmegam20@gmail.com
     </div>
     <span class="badge bg-primary rounded-pill"></span>
   </li>
